--- a/Aula 3/pom.xml
+++ b/Aula 3/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<authors>xxxxx-yyyyy</authors>
+		<authors>57672-58175</authors>
 	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -76,7 +76,7 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>2.13.2</version>
+				<version>2.13.2.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.glassfish.jaxb</groupId>
