--- a/Projeto 1/trab.props
+++ b/Projeto 1/trab.props
@@ -1,16 +1,16 @@
-USERS_REST_SERVER_MAINCLASS=tp1.server.rest.RESTUsersServer
+USERS_REST_SERVER_MAINCLASS=tp1.server.rest_servers.RESTUsersServer
 USERS_REST_PORT=8080
-USERS_SOAP_SERVER_MAINCLASS=tp1.server.soap.SOAPUsersServer
+USERS_SOAP_SERVER_MAINCLASS=tp1.server.soap_servers.SOAPUsersServer
 USERS_SOAP_PORT=8080
 USERS_EXTRA_ARGS=mysecret
-DIR_REST_SERVER_MAINCLASS=tp1.server.rest.RESTDirServer
+DIR_REST_SERVER_MAINCLASS=tp1.server.rest_servers.RESTDirServer
 DIR_REST_PORT=8080
-DIR_SOAP_SERVER_MAINCLASS=tp1.server.soap.SOAPDirServer
+DIR_SOAP_SERVER_MAINCLASS=tp1.server.soap_servers.SOAPDirServer
 DIR_SOAP_PORT=8080
 DIR_EXTRA_ARGS=mysecret
-FILES_REST_SERVER_MAINCLASS=tp1.server.rest.RESTFilesServer
+FILES_REST_SERVER_MAINCLASS=tp1.server.rest_servers.RESTFilesServer
 FILES_REST_PORT=8080
-FILES_SOAP_SERVER_MAINCLASS=tp1.server.soap.SOAPFilesServer
+FILES_SOAP_SERVER_MAINCLASS=tp1.server.soap_servers.SOAPFilesServer
 FILES_SOAP_PORT=8080
 FILES_EXTRA_ARGS=mysecret
 DISCOVERY_MULTICAST_IP=226.226.226.226
