--- a/Projeto 2/trab.props
+++ b/Projeto 2/trab.props
@@ -15,3 +15,18 @@ FILES_SOAP_PORT=15678
 FILES_EXTRA_ARGS=mysecret
 DISCOVERY_MULTICAST_IP=226.226.226.226
 DISCOVERY_MULTICAST_PORT=2262
+USERS_SERVER_KEYSTORE=users.jks
+USERS_SERVER_KEYSTORE_PWD=tp2pass
+DIR_SERVER_KEYSTORE=directories.jks
+DIR_SERVER_KEYSTORE_PWD=tp2pass
+FILES_SERVER_KEYSTORE=files.jks
+FILES_SERVER_KEYSTORE_PWD=tp2pass
+CLIENT_TRUSTSTORE=client-ts.jks
+CLIENT_TRUSTSTORE_PWD=changeit
+FILES_PROXY_SERVER_MAINCLASS=tp2.impl.servers.rest.DropboxFilesRestServer
+FILES_PROXY_PORT=5678
+FILES_PROXY_EXTRA_ARGS=argumentos extra a passar ao servidor PROXY Files
+DIR_REP_SERVER_MAINCLASS=classe do servidor Directory REST, com replicação (e.g. sd2122.tp2.server.rest.RepDirServer)
+DIR_REP_PORT=porto do servidor Directory REST, com replicação (e.g. 8080)
+DIR_REP_EXTRA_ARGS_FIRST=argumentos extra a passar ao primeiro servidor replicado
+DIR_REP_EXTRA_ARGS_OTHER=argumentos extra a passar ao outros servidores replicados
