--- a/Projeto 2/pom.xml
+++ b/Projeto 2/pom.xml
@@ -159,6 +159,15 @@
 			<artifactId>pac4j-oauth</artifactId>
 			<version>5.4.3</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.8.0</version>
+		</dependency>
 	</dependencies>
 </project>
