--- a/Projeto 2/trab.props
+++ b/Projeto 2/trab.props
@@ -26,7 +26,7 @@ CLIENT_TRUSTSTORE_PWD=changeit
 FILES_PROXY_SERVER_MAINCLASS=tp2.impl.servers.rest.DropboxFilesRestServer
 FILES_PROXY_PORT=5678
 FILES_PROXY_EXTRA_ARGS=argumentos extra a passar ao servidor PROXY Files
-DIR_REP_SERVER_MAINCLASS=classe do servidor Directory REST, com replicação (e.g. sd2122.tp2.server.rest.RepDirServer)
-DIR_REP_PORT=porto do servidor Directory REST, com replicação (e.g. 8080)
-DIR_REP_EXTRA_ARGS_FIRST=argumentos extra a passar ao primeiro servidor replicado
+DIR_REP_SERVER_MAINCLASS=tp2.impl.servers.rest.DirectoryRepRestServer
+DIR_REP_PORT=4566
+DIR_REP_EXTRA_ARGS_FIRST=FilesResources
 DIR_REP_EXTRA_ARGS_OTHER=argumentos extra a passar ao outros servidores replicados
